Fix left margin spacing

--- a/css/_op-small-talk-level-2-utils.scss
+++ b/css/_op-small-talk-level-2-utils.scss
@@ -293,7 +293,7 @@ body {
       margin-top: clamp(20px, 3.7vw, 30px);
       padding-left: clamp(11px, 2.4vw, 18px);
       ul {
-        margin-left: clamp(24px,2.4vw,18px);
+        margin-left: clamp(26px,2.4vw,18px);
       }
       li {
         padding-left: clamp(9px, 1.8vw, 13px);
@@ -391,7 +391,7 @@ body {
       display: block !important;
     }
     .decimal {
-      margin-left: 25px !important;
+      margin-left: 28px !important;
     }
     .text-header {
       margin-top: -3px !important;
