--- a/op-small-talk-level-2/lesson-04/main.css
+++ b/op-small-talk-level-2/lesson-04/main.css
@@ -304,7 +304,7 @@ body {
   }
   .html-lesson-wrapper .try-content ul,
 .html-lesson-wrapper .see-content ul {
-    margin-left: clamp(24px, 2.4vw, 18px);
+    margin-left: clamp(26px, 2.4vw, 18px);
   }
   .html-lesson-wrapper .try-content li,
 .html-lesson-wrapper .see-content li {
@@ -391,7 +391,7 @@ body {
     display: block !important;
   }
   .html-lesson-wrapper .decimal {
-    margin-left: 25px !important;
+    margin-left: 28px !important;
   }
   .html-lesson-wrapper .text-header {
     margin-top: -3px !important;
